fix flex-wrap property on folderlist.css

--- a/src/components/folder/FolderList.css
+++ b/src/components/folder/FolderList.css
@@ -14,7 +14,7 @@ div.folderList-container {
 
 div.container-cards {
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 img.folderImage {
